fixed overflowting and added some css rules

--- a/styles.css
+++ b/styles.css
@@ -220,11 +220,12 @@ a {
 .casting {
   display: flex;
   flex-direction: column;
+  height: auto;
   background-color: #222;
   border-radius: 10px;
   padding: 15px;
   margin: 10px;
-  width: 100%;
+  width: fit-content;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
@@ -234,7 +235,6 @@ a {
   align-items: center;
   border-radius: 10px;
   padding: 15px;
-  margin: 10px;
   width: 100%;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
@@ -252,9 +252,22 @@ a {
   transition : all 0.2s ease;
 }
 .actor-card img {
-  width: 100px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   object-fit: cover;
   border-radius: 10px;
   margin-right: 20px;
+}
+.actor-card h2 {
+  text-align: center;
+}
+.casting-card h2 {
+  text-align: center;
+}
+.s01 {
+  margin-top: 20px;
+  background-color: #333;
+  padding: 15px;
+  border-radius: 10px;
+  text-align: center;
 }
